# ezpg

./: README.md  pyproject.toml
src/ezpg/: __init__.py  async_pool.py  sync_pool.py
tests/: test_interface_parity.py
