[project]
name = "ezpg"
version = "0.1.0"
description = "Simple PostgreSQL connection pool library"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "odarr" }]
keywords = ["postgresql", "asyncpg", "psycopg", "database", "pool"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
]
dependencies = [
    "asyncpg>=0.30.0",
    "asyncpg-listen>=0.0.9",
    "psycopg[binary]>=3.2.0",
    "psycopg-pool>=3.2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "ruff>=0.4.0"]

[project.urls]
Homepage = "https://github.com/odarr/ezpg"
Repository = "https://github.com/odarr/ezpg"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ezpg"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
